classDiagram
    class PawPalSystem {
        +List~Owner~ owners
        +register_owner(Owner)
        +get_daily_schedule(Owner) List~Task~
    }

    class Owner {
        +String name
        +List~Pet~ pets
        +add_pet(Pet)
        +get_all_pets() List~Pet~
    }

    class Pet {
        +String name
        +String species
        +List~Task~ tasks
        +add_task(Task)
        +get_pending_tasks() List~Task~
    }

    class Task {
        +String description
        +String due_time
        +Boolean is_completed
        +mark_complete()
    }

    PawPalSystem "1" -- "*" Owner : manages
    Owner "1" *-- "*" Pet : owns
    Pet "1" *-- "*" Task : requires